--- a/TappWeb/TappWeb.csproj
+++ b/TappWeb/TappWeb.csproj
@@ -6,4 +6,10 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="FluentNHibernate" Version="3.2.0" />
+      <PackageReference Include="NHibernate" Version="5.4.2" />
+      <PackageReference Include="Npgsql" Version="8.0.0-preview.2" />
+    </ItemGroup>
+
 </Project>
